--- a/style.css
+++ b/style.css
@@ -5,19 +5,19 @@
     body {
       font-family: Arial, sans-serif;
       margin: 0;
-      background-color: #f4f6f9;
+      background-color:rgb(204, 204, 204);
     }
     .resume {
       display: flex;
       max-width: 1200px;
       margin: auto;
-      background-color: white;
+      background-color: rgb(254, 253, 252);
       min-height: 100vh;
     }
 
     .left {
       width: 60%;
-      background-color: white;
+      background-color: rgb(237, 223, 198);
       color: #000;
       padding: 30px;
     }
@@ -78,7 +78,7 @@
       
       display: inline-block;
       padding: 10px 10px;
-      background-color: wheat;
+      background-color: #cfcfcc;
       color: white;
       text-decoration: solid;
       border-radius: 8px;
@@ -86,10 +86,10 @@
       transition: background-color 0.3s ease, transform 0.3s ease;
     }
     .btn :hover{
-      background-color: #eef2f6;
+      background-color: #808000;
       transform: scale(1.05);
     }
-    
+
     .right {
       width: 40%;
       background-color: #e3f2fd;
